--- a/src/templates/altaProyectoObra.html
+++ b/src/templates/altaProyectoObra.html
@@ -114,6 +114,24 @@
                                         SELECIONE LA FECHA FIN
                                     </div>
                                 </div>
+
+                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                    <label for="monto" class="form-label">HORA ENTRA</label>
+                                    <input type="time" class="form-control" name="HORA_ENTRADA" id="HORA_ENTRADA" placeholder="Enter value"
+                                        required>
+                                    <div class="invalid-feedback">
+                                        DEFINE NUNA HORA DE ENTRA AL PROYECTO
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                    <label for="monto" class="form-label">HORA SALIDA</label>
+                                    <input type="time" class="form-control" name="HORA_SALIDA" id="HORA_SALIDA" placeholder="Enter value"
+                                        required>
+                                    <div class="invalid-feedback">
+                                        DEFINE NUNA HORA DE SALIDA AL PROYECTO
+                                    </div>
+                                </div>
                             </div>
                             <!--Fin info general-->
                         </div>
@@ -141,7 +159,7 @@
                                 
                                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                                     <label for="MUNICIPIO" class="form-label">MUNICIPIO*</label>
-                                    <select id="ESTADO" class="form-control" name="ESTADO" required>
+                                    <select id="MUNICIPIO" class="form-control" name="MUNICIPIO" required>
                                         <option value="" style="text-align: center;">SELECIONA</option>
                                         <option value="AGUASCALIENTES">AGUASCALIENTES</option>
                                         <option value="BAJA CALIFORNIA">BAJA CALIFORNIA</option>
