--- a/src/templates/modificar_presupuesto.html
+++ b/src/templates/modificar_presupuesto.html
@@ -134,6 +134,11 @@
 
     }
 
+    .readonly-select {
+    pointer-events: none; /* Deshabilita la interacción del usuario */
+    background-color: #e9ecef; /* Color de fondo para el select de solo lectura */
+    cursor: not-allowed; /* Cambia el cursor a no permitido */
+    }
 
     .borderless {
         border: none;
@@ -488,18 +493,36 @@
                             <td>
                                 <input type="text" class="form-control currency-input presupuesto-diferencia" id="DIFERENCIA_{{loop.index}}" name="DIFERENCIA_DB[]" onchange="concular_diferencia()" value="{{ detalle['diferencia'] }}" readonly="">
                             </td>
+                           
+                            {% if detalle['id_proveedor'] == 0 %}
+                            <td>
+                                <select style="text-align: center;" id="CONTRATO_FIRMADO" name="CONTRATO_FIRMADO_DB[]" class="form-control readonly-select">
+                                    <option value=1 {{ 'selected' if detalle['contrato_firmado'] == 0 else '' }}>SÍ</option>
+                                    <option value=0 {{ 'selected' if detalle['contrato_firmado'] == 1 else '' }}>NO</option>
+                                </select>
+                            </td>
+                            <td>
+                                <select id="STATUS_{{loop.index}}" name="STATUS_DB[]" class="form-control readonly-select">
+                                    <option value=0 {{ 'selected' if  detalle['estatus'] == 0 else '' }}>PRESUPUESTO CARGADO</option>
+                                    <option value=1 {{ 'selected' if  detalle['estatus'] == 1 else '' }}>APROBADO POR DIRECTOR</option>
+                                </select>
+                            </td>
+                            {% else %}
                             <td>
                                 <select style="text-align: center;" id="CONTRATO_FIRMADO" name="CONTRATO_FIRMADO_DB[]" class="form-control">
-                                    <option value=True {{ 'selected' if detalle['contrato_firmado'] == 1 else '' }}>SÍ</option>
-                                    <option value=False {{ 'selected' if detalle['contrato_firmado'] == 2 else '' }}>NO</option>
+                                    <option value=1 {{ 'selected' if detalle['contrato_firmado'] == 0 else '' }}>SÍ</option>
+                                    <option value=0 {{ 'selected' if detalle['contrato_firmado'] == 1 else '' }}>NO</option>
                                 </select>
                             </td>
                             <td>
-                                <select id="STATUS" name="STATUS_DB[]" class="form-control">
-                                    <option value="{{ detalle['estatus'] }}" {{ 'selected' if  detalle['estatus'] == 1 else '' }}>PRESUPUESTO CARGADO</option>
-                                    <option value="{{ detalle['estatus'] }}" {{ 'selected' if  detalle['estatus'] == 2 else '' }}>APROBADO POR DIRECTOR</option>
+                                <select id="STATUS_{{loop.index}}" name="STATUS_DB[]" class="form-control">
+                                    <option value=0 {{ 'selected' if  detalle['estatus'] == 0 else '' }}>PRESUPUESTO CARGADO</option>
+                                    <option value=1 {{ 'selected' if  detalle['estatus'] == 1 else '' }}>APROBADO POR DIRECTOR</option>
                                 </select>
                             </td>
+                            {%endif%}
+                           
+                            
                             <td> 
                                 <div class="d-flex align-items-center justify-content-center">
                                     <button type="button" onclick="eliminarFila(this)" class="btn"><i class="bi bi-trash"></i></button>
@@ -527,24 +550,24 @@
                            
                             <td   colspan="3" class="text-end"><strong>% INDIRECTO:</strong></td>
                             <td><input type="number"  name="porcentajeIndirecto" id="porcentajeIndirecto" min="0" max="25" class="form-control"
-                                    style="text-align: center;width: 110px;" placeholder="0"
+                                    style="text-align: center;width: 110px;" value="{{ presupuesto['porcentaje_indirecto'] }}" placeholder="0"
                                     onchange="calcularTotalConIndirecto()"></td>
                             <td colspan="5"></td>
                         </tr>
                         <tr>
                         
                             <td  colspan="3" class="text-end"><strong>TOTAL INDIRECTO:</strong></td>
-                            <td><input type="text" id="totalIndirectoCliente" name="totalIndirectoCliente" class="form-control  currency-input"
-                                    placeholder="$0.00" readonly></td>
+                            <td><input type="text" id="totalIndirectoCliente" name="totalIndirectoCliente" class="form-control currency-input"
+                                    placeholder="$0.00" value="{{presupuesto['indirecto_cliente_iva']}}" readonly></td>
                             <td colspan="5"></td>
                         </tr>
                         <tr>
                             <td colspan="3" class="text-end"><strong>TOTAL:</strong></td>
-                            <td><input type="text" id="totalCliente" name="totalCliente" class="form-control  currency-input"
+                            <td><input type="text" id="totalCliente" name="totalCliente" class="form-control currency-input" value="{{presupuesto['total_cliente_iva']}}"
                                     placeholder="$0.00" readonly></td>
-                            <td><input type="text" id="totalContratista"  name="totalContratista" value="{{ presupuesto['sub_proveedor']}}"  class="form-control  currency-input"
+                            <td><input type="text" id="totalContratista"  name="totalContratista" value="{{ presupuesto['total_proveedor']}}"  class="form-control  currency-input"
                                     placeholder="$0.00" readonly></td>
-                            <td><input type="text" id="totalDiferencia" name="totalDiferencia" class="form-control  currency-input"
+                            <td><input type="text" id="totalDiferencia" name="totalDiferencia" value="{{presupuesto['total_diferencia']}}" class="form-control  currency-input"
                                     placeholder="$0.00" readonly></td>
                             <td colspan="3"></td>
                         </tr>
@@ -607,7 +630,7 @@
                 </div>
                 
                 <br>
-                <input type="text" class="form-control" name="ID_PARTIDA_DB[]" value="{{indice_detalle}}" >
+                <input type="text" class="form-control oculto" name="ID_PARTIDA_DB[]" value="{{indice_detalle}}" >
                 <div class="table-presupuesto_sub">
                     <table id="tablasub_{{indice_detalle}}" class="table tabla-subpresupuesto table-hover table-borderless">
                         <colgroup>
@@ -644,7 +667,7 @@
                                 <td>{{loop.index}}</td>
                                 {% if subdetalle['is_nomina'] %}
                                 <td>
-                                    <input type="text" class="form-control" name="ID_DETALLE_SUB_BUART_DB[]" value="{{subdetalle['id']}}" > 
+                                    <input type="text" class="form-control oculto" name="ID_DETALLE_SUB_BUART_DB[]" value="{{subdetalle['id']}}" > 
                                     <input type="text" class="form-control sub_concepto" id="INPUT_ESPECIALIDADES_SUB_{{indice_detalle}}-{{loop.index}}" oninput="autocompleta_concepto_sub_modificar(this,'{{indice_detalle}}','{{loop.index}}',true)" name="ESPECIALIDADES_SUB_DB[]" value="{{ subdetalle['concepto'] }}" autocomplete="off" required="">
                                     <input type="text" class="form-control" style="display: none" id="INPUT_ID_ESPECIALIDADES_SUB_{{indice_detalle}}-{{loop.index}}" name="INPUT_ID_ESPECIALIDADES_SUB_DB[]" value="{{ subdetalle['id_concepto'] }}">
                                     <input type="text" class="form-control" style="display: none" id="IS_NOMINA_{{indice_detalle}}-{{loop.index}}[]" value="1" name="IS_NOMINA_SUB_DB[]">
@@ -674,9 +697,9 @@
                                     <input type="text" class="form-control currency-input presupuesto-diferencia" value="{{ subdetalle['diferencia'] }}" name="SUB_DIFERENCIA_DB[]" readonly>
                                 </td>
                                 <td>
-                                    <select id="STATUS" name="STATUS_SUB_DB[]" class="form-control">
-                                        <option value="{{ subdetalle['estatus'] }}" {{ 'selected' if  subdetalle['estatus'] == 1 else '' }}>PRESUPUESTO CARGADO</option>
-                                        <option value="{{ subdetalle['estatus'] }}" {{ 'selected' if  subdetalle['estatus'] == 2 else '' }}>APROBADO POR DIRECTOR</option>
+                                    <select id="STATUS" name="STATUS_SUB_DB[]"  class="form-control">
+                                        <option value=0 {{ 'selected' if  subdetalle['estatus'] == 0 else '' }}>PRESUPUESTO CARGADO</option>
+                                        <option value=1 {{ 'selected' if  subdetalle['estatus'] == 1 else '' }}>APROBADO POR DIRECTOR</option>
                                     </select>
                                 </td>
                                 <td class="d-flex align-items-center justify-content-center">
@@ -686,7 +709,7 @@
                                 </td>
                                 {% else %}
                                 <td>    
-                                    <input type="text" class="form-control" name="ID_DETALLE_SUB_BUART_DB[]" value="{{subdetalle['id']}}" > 
+                                    <input type="text" class="form-control oculto" name="ID_DETALLE_SUB_BUART_DB[]" value="{{subdetalle['id']}}" > 
                                     <input type="text" class="form-control sub_concepto" id="INPUT_ESPECIALIDADES_SUB_{{indice_detalle}}-{{loop.index}}" oninput="autocompleta_concepto_sub_modificar(this,'{{indice_detalle}}','{{loop.index}}',false)" name="ESPECIALIDADES_SUB_DB[]" value="{{ subdetalle['concepto'] }}" autocomplete="off" required="">
                                     <input type="text" class="form-control" style="display: none" id="INPUT_ID_ESPECIALIDADES_SUB_{{indice_detalle}}-{{loop.index}}" name="INPUT_ID_ESPECIALIDADES_SUB_DB[]" value="{{ subdetalle['id_concepto'] }}">
                                     <input type="text" class="form-control" style="display: none" id="IS_NOMINA_{{indice_detalle}}-{{loop.index}}[]"  value="1">
@@ -712,8 +735,8 @@
                                 </td>
                                 <td>
                                     <select id="STATUS" name="STATUS_SUB_DB[]" class="form-control">
-                                        <option value="{{ subdetalle['estatus'] }}" {{ 'selected' if  subdetalle['estatus'] == 1 else '' }}>PRESUPUESTO CARGADO</option>
-                                        <option value="{{ subdetalle['estatus'] }}" {{ 'selected' if  subdetalle['estatus'] == 2 else '' }}>APROBADO POR DIRECTOR</option>
+                                        <option value=0 {{ 'selected' if  subdetalle['estatus'] == 0 else '' }}>PRESUPUESTO CARGADO</option>
+                                        <option value=1 {{ 'selected' if  subdetalle['estatus'] == 1 else '' }}>APROBADO POR DIRECTOR</option>
                                     </select>
                                 </td>
                                 <td>
